Loop data from json

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -8,78 +8,26 @@ description: Collection of beautiful things that you can buy in India
 			
 			<section class="list-container container">
 				<ul class="list">
-					<li class="list-item">
-						<a href="/" title="Name of the object - Store name">
-							<article class="list-item-article">
-								<figure><img src="images/daily-obj.png" alt="" /></figure>
-								<header>
-									<h3>Daily Objects</h3>
-									<h1>Atym Card Wallet</h1>
-									<h2>₹ 345</h2>
-								</header>
-							</article>
-						</a>
-					</li>
-					<li class="list-item">
-						<a href="/" title="Name of the object - Store name">
-							<article class="list-item-article">
-								<figure><img src="images/daily-obj.png" alt="" /></figure>
-								<header>
-									<h3>Daily Objects</h3>
-									<h1>Atym Card Wallet</h1>
-									<h2>₹ 345</h2>
-								</header>
-							</article>
-						</a>
-					</li>
-					<li class="list-item">
-						<a href="/" title="Name of the object - Store name">
-							<article class="list-item-article">
-								<figure><img src="images/daily-obj.png" alt="" /></figure>
-								<header>
-									<h3>Daily Objects</h3>
-									<h1>Atym Card Wallet</h1>
-									<h2>₹ 345</h2>
-								</header>
-							</article>
-						</a>
-					</li>
-					<li class="list-item">
-						<a href="/" title="Name of the object - Store name">
-							<article class="list-item-article">
-								<figure><img src="images/daily-obj.png" alt="" /></figure>
-								<header>
-									<h3>Daily Objects</h3>
-									<h1>Atym Card Wallet</h1>
-									<h2>₹ 345</h2>
-								</header>
-							</article>
-						</a>
-					</li>
-					<li class="list-item">
-						<a href="/" title="Name of the object - Store name">
-							<article class="list-item-article">
-								<figure><img src="images/daily-obj.png" alt="" /></figure>
-								<header>
-									<h3>Daily Objects</h3>
-									<h1>Atym Card Wallet</h1>
-									<h2>₹ 345</h2>
-								</header>
-							</article>
-						</a>
-					</li>
-					<li class="list-item">
-						<a href="/" title="Name of the object - Store name">
-							<article class="list-item-article">
-								<figure><img src="images/daily-obj.png" alt="" /></figure>
-								<header>
-									<h3>Daily Objects</h3>
-									<h1>Atym Card Wallet</h1>
-									<h2>₹ 345</h2>
-								</header>
-							</article>
-						</a>
-					</li>
+
+				{{#with products}}
+				  {{#each products}}
+
+							<li class="list-item">
+								<a href="{{source}}" title="{{name}} - {{store}}">
+									<article class="list-item-article">
+										<figure><img src="{{image}}" alt="" /></figure>
+										<header>
+											<h3>{{store}}</h3>
+											<h1>{{name}}</h1>
+											<h2>₹ {{price}}</h2>
+										</header>
+									</article>
+								</a>
+							</li>
+
+				  {{/each}}
+				{{/with}}
+
 				</ul>
 			</section>
   
