--- a/app/templates/partials/footer.hbs
+++ b/app/templates/partials/footer.hbs
@@ -1,8 +1,10 @@
 <footer class="site-footer">
 	<p>
-		Put together in Goa, by <a href="#">Joy</a> & <a href="#">Kamal</a>
+		Put together in Goa, by 
+		<a href="https://twitter.com/_ighosh" title="Joy on Twitter">Joy</a> 
+		& <a href="https://twitter.com/_ighosh" title="Kamal on Twitter">Kamal</a>.
 	</p>
 	<p>
-		© is fallacy. Koi value nhi deta aaj kal.
+		© is fallacy. Koi value nahi deta aaj kal.
 	</p>
 </footer>
