--- a/app/assets/scss/app.scss
+++ b/app/assets/scss/app.scss
@@ -1,4 +1,6 @@
 @import 'base/normalize';
+@import 'base/variables';
+
 
 /* ==========================================================================
    Base styles: opinionated defaults
@@ -92,14 +94,20 @@ body {
   font-family: -apple-system,BlinkMacSystemFont,"Helvetica Neue",sans-serif;
   background-color: #F8F9FA;
   letter-spacing: 0;
-    font-weight: 400;
-    font-style: normal;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -moz-font-feature-settings: "liga" on;
+	font-weight: 400;
+	font-style: normal;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-moz-font-feature-settings: "liga" on;
   line-height: 1;
-  color: #868E96;
+  color: $primary-color;
+}
+.truncate {
+	width: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .site-header {
   background-color: #fff;
@@ -118,7 +126,7 @@ body {
 .site-header h1 a {
   font-weight: 600;
   text-decoration: none;
-  color: #C2255C;
+  color: $theme-color;
   text-transform: uppercase;
 }
 .container {
@@ -132,10 +140,22 @@ body {
   margin-top: 4rem;
 }
 .list { padding: 0; }
+.list:hover li img { opacity: 0.65 !important; }
+.list li:hover img { opacity: 1 !important; }
 .list-item {
   list-style-type: none;
   margin-bottom: 1rem;
   width: 100%;
+  transition: all 0.12s ease-in;
+  transform: translate3d(0,0,0); 
+  &:hover {
+	  	box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.12);
+  		transform: translate3d(0,-2px,0); 
+		.list-item-article h2:after {
+			opacity: 1;
+			margin-left: 5px;
+		}
+  }
 }
 .list-item a {
   display: block;
@@ -145,29 +165,60 @@ body {
 }
 .list-item a img {
   max-width: 100%;
-  height: 200px;
-}
-.list-item-article article {
-  text-align: center;
+  height: auto;
+  max-height: 180px;
+  transition: all 0.25s ease-in;
+  opacity: 0;
 }
 .list-item-article h1 {
   font-size: 0.9rem;
   font-weight: 400;
-  color: #868E96;
+  color: $primary-color;
   margin: 0 0 0.75rem 0;
+  @extend .truncate;
 }
 .list-item-article h2 {
   font-size: 0.9rem;
   font-weight: 600;
-  color: #C2255C;
+  color: $theme-color;
   margin: 0;
+	&:after {
+		transition: all 0.25s ease-in;
+		content: '→';  
+		opacity: 0;
+	}
 }
 .list-item-article h3 {
-  font-size: 0.8rem;
+  font-size: 0.75rem;
   font-weight: 200;
-  color: #868E96;
-  opacity: 0.7;
+  color: $secondary-color;
   margin: 0 0 0.5rem 0;
+}
+.list-item-article {
+	figure { 
+		margin: 0; 
+		text-align: center;
+		height: 180px;
+	}
+	header { margin-top: 1rem; }
+	.reason {
+		font-size: 0.9rem;
+		margin: 0;
+		margin-top: 0.75rem;
+		font-style: italic;
+		font-weight: normal;
+		color: $secondary-color;
+		position: relative;
+		border-top: 1px solid dashed #E9ECEF;
+		padding-top: 0.75rem;
+		font-family: Georgia, sans-serif;
+		line-height: 1.2;
+		@extend  .truncate;
+		&:before {
+			content:'“ ';
+			font-family: Arial, sans-serif;
+		}
+	}
 }
 .site-footer {
   text-align: center;
@@ -191,6 +242,11 @@ body {
 @media screen and (min-width: 1024px) {
   .list-item {
     width: calc(33.33% - 1em);
+  }
+}
+@media screen and (min-width: 1280px) {
+  .list-item {
+    width: calc(25% - 0.75em);
   }
 }
 
