--- a/app/templates/layouts/master.hbs
+++ b/app/templates/layouts/master.hbs
@@ -29,7 +29,7 @@
   {{> 'footer'}}
 
   </div>
-
+  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
   <script type="text/javascript" src="/js/site.js"></script>
 </body>
 </html>
