--- a/app/templates/partials/header.hbs
+++ b/app/templates/partials/header.hbs
@@ -1,5 +1,5 @@
 <header class="site-header">
 	<nav class="container">
-		<h1><a href="/">Wanna Buy</a></h1>
+		<h1><a href="/">Soochi</a></h1>
 	</nav>
 </header>
