Open links in a new tab

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -13,7 +13,7 @@ description: List of beautiful objects
 				  {{#each products}}
 
 							<li class="list-item">
-								<a href="{{source}}" title="{{name}} - {{reason}}">
+								<a href="{{source}}" title="{{name}} - {{reason}}" target="_blank">
 									<article class="list-item-article">
 										<figure>
 											<img data-src="{{image}}" src="/images/bg.png" alt="" />
