Add logo and footer desc

--- a/app/assets/scss/app.scss
+++ b/app/assets/scss/app.scss
@@ -1,6 +1,6 @@
 @import 'base/normalize';
 @import 'base/variables';
-@import 'base/helpers.css';
+@import 'base/helpers';
 
 body {
 	font-family: -apple-system,BlinkMacSystemFont,"Helvetica Neue",sans-serif;
