--- a/app/templates/partials/footer.hbs
+++ b/app/templates/partials/footer.hbs
@@ -1,4 +1,5 @@
-<footer class="site-footer">
+<footer class="container site-footer">
+	<img src="/images/footer-desc.png" srcset="/images/footer-desc.png 1x, /images/footer-desc-@2x.png 2x" alt="" />
 	<p>
 		Put together in Goa, by 
 		<a href="https://twitter.com/kns008" title="Kamal on Twitter">Kamal</a>
