--- a/app/templates/partials/header.hbs
+++ b/app/templates/partials/header.hbs
@@ -1,5 +1,10 @@
 <header class="site-header">
 	<nav class="container">
-		<h1><a href="/">Soochi</a></h1>
+		<h1>
+			<a href="/" title="Soochi">
+				<img src="/images/logo.png" srcset="/images/logo.png 1x, /images/logo-@2x.png 2x">
+				<span class="visuallyhidden">Soochi</span>
+			</a>
+		</h1>
 	</nav>
 </header>
