--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
 ---
-title: Soochi - List of beautiful objects
-description: List of beautiful objects
+title: Soochi
+description: Soochi is a list of well designed products.
 ---
 
 {{#extend "master"}}
