--- a/app/templates/layouts/master.hbs
+++ b/app/templates/layouts/master.hbs
@@ -10,10 +10,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="HandheldFriendly" content="True">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Facebook / Open Graph -->
+  <meta property="og:title" content="{{page.title}}">
+  <meta property="og:image" content="/images/fb-open-graph.png">
+  <meta property="og:description" content="{{page.description}}">
+  <meta property="og:site_name" content="{{page.title}}">
+  
+  <!-- Twitter cards -->
+  <meta name="twitter:title" content="{{page.title}}">
+  <meta name="twitter:description" content="{{page.description}}">
+  <meta name="twitter:image" content="/images/fb-open-graph.png">
 
   <meta name="description" content="{{page.description}}">
   
   <link rel="stylesheet" href="css/app.css" media="screen" title="no title" charset="utf-8">
+  
+  <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 
 </head>
   
