--- a/app/templates/partials/footer.hbs
+++ b/app/templates/partials/footer.hbs
@@ -1,11 +1,13 @@
 <footer class="container site-footer">
-	<img src="/images/footer-desc.png" srcset="/images/footer-desc.png 1x, /images/footer-desc-@2x.png 2x" alt="" />
-	<p>
-		Put together in Goa, by 
-		<a href="https://twitter.com/kns008" title="Kamal on Twitter">Kamal</a>
-		& <a href="https://twitter.com/_ighosh" title="Joy on Twitter">Ghosh</a>.
-	</p>
-	<p>
-		© is fallacy. Koi value nahi deta aaj kal.
-	</p>
+	<div class="site-footer__inner">
+		<img src="/images/footer-desc.png" srcset="/images/footer-desc.png 1x, /images/footer-desc-@2x.png 2x" alt="" />
+		<p>
+			Put together in Goa, by 
+			<a href="https://twitter.com/kns008" title="Kamal on Twitter">Kamal</a>
+			& <a href="https://twitter.com/_ighosh" title="Joy on Twitter">Ghosh</a>.
+		</p>
+		<p>
+			© is fallacy. Koi value nahi deta aaj kal.
+		</p>
+	</div>
 </footer>
