Sync data from google sheets

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -13,12 +13,12 @@ description: Soochi is a list of well designed products.
 				  {{#each products}}
 
 							<li class="list-item">
-								<a href="{{source}}" title="{{name}} - {{reason}}" target="_blank">
+								<a href="{{itemUrl}}" title="{{name}} - {{reason}}" target="_blank">
 									<article class="list-item-article">
 										<figure>
-											<img data-src="{{image}}" src="/images/bg.png" alt="" />
+											<img data-src="{{imageUrl}}" src="/images/bg.png" alt="" />
 											<noscript>
-												<img src="{{image}}" />
+												<img src="{{imageUrl}}" />
 											</noscript>
 										</figure>
 										<header>
