--- a/app/assets/scss/app.scss
+++ b/app/assets/scss/app.scss
@@ -149,6 +149,79 @@ body {
 	  }
   }
 }
+.signup-form {
+	margin-top: 2rem;
+	form {
+		border: 1px solid #ddd;
+		padding: 0.5rem 0.5rem 1rem;
+		border-radius: 3px;
+		overflow: hidden;
+	}
+	.form-title {
+		font-size: 1rem;
+		font-weight: 500;
+		line-height: 1.3;
+		margin-bottom: 0.5rem;
+		margin-top: 0;
+	}
+	.form-subtitle {
+		font-size: 0.8rem;
+		margin: 0 0 0.75rem 0;
+		font-weight: normal;
+		opacity: 0.65;
+	}
+	.email {
+		width: 100%;
+		box-sizing: border-box;
+		padding: 0.5rem 1rem;
+		border-radius: 3px;
+		margin-bottom: 0.5rem;
+		border: none;
+	}
+	.button {
+		background-color: $theme-color;
+		color: white;
+		border: none;
+		outline: none;
+		text-transform: uppercase;
+		font-weight: 500;
+		width: 100%;
+		border-radius: 3px;
+		padding: 0.5rem 1rem;
+		text-align: center;
+		&:hover {
+			cursor: pointer;
+			background-color: rgba($theme-color, 0.8);
+		}
+	}
+	@media screen and (min-width: 425px) {
+		form {
+			padding-bottom: 0.5rem;
+		}
+		.email { 
+			width: 59%; 
+			float: left; 
+		}
+		.button { 
+			float: right;
+			width: 40%; 
+		}
+	}
+	@media screen and (min-width: 768px) {
+		form { padding: 1rem; }
+	}
+	@media screen and (min-width: 1280px) {
+		.form-subtitle { margin-bottom: 1.25rem; }
+		.email, .button { padding: 0.75rem 1.25rem; }
+		.email { width: 66%; }
+		.button { width: 32%; }
+		form {
+			width: 50%;
+			margin-left: auto;
+			margin-right: auto;
+		}
+	}
+}
 @media screen and (min-width: 768px) {
   .list { 
     display: flex; 
