--- a/app/assets/scss/app.scss
+++ b/app/assets/scss/app.scss
@@ -152,7 +152,7 @@ body {
 .signup-form {
 	margin-top: 2rem;
 	form {
-		border: 1px solid #ddd;
+		border: 1px dashed #ddd;
 		padding: 0.5rem 0.5rem 1rem;
 		border-radius: 3px;
 		overflow: hidden;
