--- a/app/assets/scss/app.scss
+++ b/app/assets/scss/app.scss
@@ -222,7 +222,7 @@ body {
 		}
 	}
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 568px) {
   .list { 
     display: flex; 
     flex-wrap: wrap;
@@ -232,13 +232,13 @@ body {
     width: calc(50% - 0.5em);
   }
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   .list-item {
-    width: calc(33.33% - 1em);
+    width: calc(33.33% - 1em) !important;
   }
 }
 @media screen and (min-width: 1280px) {
   .list-item {
-    width: calc(25% - 0.75em);
+    width: calc(25% - 0.75em) !important;
   }
 }
