Add event tracking and clean up javascript

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -23,7 +23,7 @@ description: Soochi is a list of well designed products.
 										</figure>
 										<header>
 											<h3 class="store-name">{{store}}</h3>
-											<h1 class="produc-name">{{name}}</h1>
+											<h1 class="product-name">{{name}}</h1>
 											<h2 class="price">₹ {{price}}</h2>
 											<h4 class="reason">{{reason}}</h4>
 										</header>
