Add an image loader

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -16,7 +16,7 @@ description: Soochi is a list of well designed products.
 								<a href="{{itemUrl}}" title="{{name}} - {{reason}}" target="_blank">
 									<article class="list-item-article">
 										<figure>
-											<img data-src="{{imageUrl}}" src="/images/bg.png" alt="" />
+											<img data-src="{{imageUrl}}" src="/images/loader.svg" alt="" />
 											<noscript>
 												<img src="{{imageUrl}}" />
 											</noscript>
