--- a/app/assets/scss/app.scss
+++ b/app/assets/scss/app.scss
@@ -29,8 +29,8 @@ body {
   top: 0;
   z-index: 10;
 }
-.site-header h1 { 
-  margin: 0; 
+.site-header h1 {
+  margin: 0;
   font-size: 0.9rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -57,10 +57,10 @@ body {
   margin-bottom: 1rem;
   width: 100%;
   transition: all 0.12s ease-in;
-  transform: translate3d(0,0,0); 
+  transform: translate3d(0,0,0);
   &:hover {
 	  	box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.12);
-  		transform: translate3d(0,-2px,0); 
+  		transform: translate3d(0,-2px,0);
 		.list-item-article h2:after {
 			opacity: 1;
 			margin-left: 5px;
@@ -95,7 +95,7 @@ body {
   margin: 0;
 	&:after {
 		transition: all 0.25s ease-in;
-		content: '→';  
+		content: '→';
 		opacity: 0;
 	}
 }
@@ -106,10 +106,16 @@ body {
   margin: 0 0 0.5rem 0;
 }
 .list-item-article {
-	figure { 
-		margin: 0; 
+	figure {
+		margin: 0;
 		text-align: center;
 		height: 180px;
+		&.image-loading {
+			background-image: url('/images/loader.svg');
+			background-repeat: no-repeat;
+			background-size: 2rem;
+			background-position: right top;
+		}
 	}
 	header { margin-top: 1rem; }
 	.reason {
@@ -198,13 +204,13 @@ body {
 		form {
 			padding-bottom: 0.5rem;
 		}
-		.email { 
-			width: 59%; 
-			float: left; 
+		.email {
+			width: 59%;
+			float: left;
 		}
-		.button { 
+		.button {
 			float: right;
-			width: 40%; 
+			width: 40%;
 		}
 	}
 	@media screen and (min-width: 768px) {
@@ -223,8 +229,8 @@ body {
 	}
 }
 @media screen and (min-width: 568px) {
-  .list { 
-    display: flex; 
+  .list {
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
   }
