--- a/app/templates/partials/signup-form.hbs
+++ b/app/templates/partials/signup-form.hbs
@@ -1,6 +1,6 @@
 <!-- Begin MailChimp Signup Form -->
 <div id="mc_embed_signup" class="signup-form container">
-<form action="//soochi.us14.list-manage.com/subscribe/post?u=603c19d4f1833db9610dfc35d&amp;id=080c737f1b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+<form action="//Soochi.us14.list-manage.com/subscribe/post?u=2a10e233f63657bd3b5a2af31&amp;id=d32e9215f9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 	<h2 class="form-title">We'll be adding more products (& features) every week. Interested?</h2>
 	<h3 class="form-subtitle">*1 email per week</h3>
@@ -12,7 +12,7 @@
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_603c19d4f1833db9610dfc35d_080c737f1b" tabindex="-1" value=""></div>
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2a10e233f63657bd3b5a2af31_d32e9215f9" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Count me in!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
 </form>
