Add a basic "Suggest a product" button

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -37,5 +37,14 @@ description: Soochi is a list of well designed products.
 				</ul>
 			</section>
 
+			<div class="suggest-button">
+				<a 
+					href="https://goo.gl/forms/nMd7t4SM1heu7yxI2" 
+					target="_blank" 
+					class="suggest-button__link">
+					Suggest a product
+				</a>
+			</div>
+
 {{/content}}
 {{/extend}}
