--- a/app/assets/scss/app.scss
+++ b/app/assets/scss/app.scss
@@ -248,3 +248,22 @@ body {
     width: calc(25% - 0.75em);
   }
 }
+
+.suggest-button {
+	text-align: center;
+	margin: 2rem 0 2.5rem 0;
+	&__link {
+		color: $theme-color;
+		border: 1px solid;
+		padding: 0.75rem 1rem;
+		display: inline-block;
+		text-decoration: none;
+		border-radius: 3px;
+		font-weight: 500;
+		transition: 0.15s ease;
+		&:hover {
+			background-color: $theme-color;
+			color: #fff;
+		}
+	}
+}
