Add Reason URL in product grids

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -40,7 +40,11 @@ description: Soochi is a list of well designed products.
 							</article>
 						</a>
 						{{!-- Reason --}}
-						<a href="" target="_blank" class="reason truncate">
+						<a 
+							href="{{reasonUrl}}" 
+							target="_blank"
+							title="{{reason}}"
+							class="reason truncate">
 							{{reason}}
 						</a>
 					</li>
